# pyiron_snippets

./: .coveragerc  .gitattributes  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-tests.yml  environment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  dependabot-pr.yml  pr-labeled.yml  pr-target-opened.yml  push-pull.yml  release-or-preview.yml  weekly.yml  with-codecov.yml
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: example.ipynb
pyiron_snippets/: __init__.py  _version.py  context.py  deprecate.py  directory_context.py  exception_context.py  factory.py  files.py  import_alarm.py  resources.py  retrieve.py  retry.py  singleton.py  tempenv.py  versions.py
snippets/: _version.py  deprecate.py  factory.py  import_alarm.py  retry.py  singleton.py
tests/unit/: test_context.py  test_deprecate.py  test_directory_context.py  test_docs.py  test_dotdict.py  test_exception_context.py  test_factory.py  test_files.py  test_has_post.py  test_import_alarm.py  test_logger.py  test_resources.py  test_retrieve.py  test_retry.py  test_singleton.py  test_tempenv.py  test_tests.py  test_util.py  test_versions.py
