[build-system]
requires = [
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "snippets"
description = "snippets - Short, dependency-free python snippets."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
]
dynamic = [ "version",]
authors = [
    { name = "Liam Huber", email = "liamhuber@greyhavensolutions.com" },
    { name = "Sam Waseda", email = "o.waseda@mpie.de" }
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://snippets.readthedocs.io"
Repository = "https://github.com/pyiron/snippets"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "snippets/_version.py"
parentdir_prefix = "snippets"
tag_prefix = "snippets-"

[tool.setuptools.packages.find]
include = [ "snippets*",]

[tool.setuptools.dynamic.version]
attr = "snippets.__version__"

[project.optional-dependencies]
tests = [
    "cloudpickle==3.0.0",
]